# FileBackup

./: .copier-answers.yml  .gitignore  .python_project_bootstrapper_config.yml  .python_project_bootstrapper_manifest.yml  BootstrapEpilog.py  Build.py  BuildBinary.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  minisign_key.pub  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/release_impl/: action.yml
.github/workflows/: CICD.yml  CICD_impl.yml  codeql.yml  standard.yaml  standard.yml
src/: AutoGitSemVer.yaml  BuildBinary.py
src/FileBackup/: EntryPoint.py  Math.py  Mirror.py  Offsite.py  Snapshot.py  __init__.py
src/FileBackup/CommandLine/: CommandLineArguments.py  EntryPoint.py  MirrorEntryPoint.py  OffsiteEntryPoint.py
src/FileBackup/DataStore/: FastGlacierDataStore.py  FileSystemDataStore.py  S3BrowserDataStore.py  SFTPDataStore.py
src/FileBackup/DataStore/Interfaces/: BulkStorageDataStore.py  DataStore.py  FileBasedDataStore.py
src/FileBackup/Impl/: Common.py
tests/: EntryPoint_UnitTest.py  Math_UnitTest.py  Mirror_UnitTest.py  Offsite_UnitTest.py  Snapshot_UnitTest.py  TestHelpers.py
tests/CommandLine/: EntryPoint_UnitTest.py
